data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_436.wast
;; 7. **Test Description**: Incorporate an invalid type conversion within a loop that attempts to convert the wrong value type leading to a sequence resulting in `unreachable`.    - **Constraint**: Checks conversion handling within loops, ensuring validity before applying operations.    - **Unreachable Code Execution**: Invalid conversions must trap rather than leading to `unreachable`.

(assert_invalid
  (module
    (func $type-invalid-conversion-in-loop
      (i32.const 0)
      (loop (result i32)
        (f64.const 1.2)
        (i32.trunc_f32_s)  ;; Invalid conversion within loop
      )
    )
  )
  "type mismatch"
)